--- a/models/research/object_detection/training/ssd_mobilenet_v2_coco.config
+++ b/models/research/object_detection/training/ssd_mobilenet_v2_coco.config
@@ -186,9 +186,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/mscoco_val.record-?????-of-00010"
+    input_path: "drive/My Drive/tensorflow1/models/research/object_detection/test.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/mscoco_label_map.pbtxt"
+  label_map_path: "drive/My Drive/tensorflow1/models/research/object_detection/training/labelmap.pbtxt"
   shuffle: false
   num_readers: 1
 }
